# sandbox

./: .editorconfig  .pylintrc  .tool-versions  Makefile  README.rst  mise.toml  package.json  prj  pyproject.toml
data/: .gitignore  Makefile  run
data/iplists/: README.rst  dnsbl_test_list.txt  ip_test_list.txt  ip_test_list_filtered.txt
data/searxng/: ipv4_botnet.lst
data/spamhaus/: ipv4_spamhaus_ASN-DROP.lst  ipv6_spamhaus_ASN-DROP.lst
scripts/: lib_doc-sphinx.sh  lib_py.sh  msg.sh
snippets/: forgejo_install  poc-shell.py  ts2mp4
src/dot.files/: .bashrc  .emacs  .inputrc
src/dot.files/.config/mise/: config.toml
src/pysandbox/: __init__.py  __pkginfo__.py  cli.py
src/pysandbox/prj/: __init__.py  _cli.py  iplists.py  pydnsbl.py  whois.py  words.py
